--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
   
   <script>
     function send() {
-      fetch("https://telegram-bot-worker.vibolreatanak-phath.workers.dev", {
+      fetch("https://profilepage-wkr-01.rathanak-phath.workers.dev", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
